# general-medical-rag

./: .env  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
colab_notebooks/: text_extraction_splitting_embdedding.py
modules/app_cache/: AppCache.py  __init__.py
modules/rag_pipeline/: __init__.py  rag_engine_chain.py
modules/utils/: Utils.py  __init__.py
modules/vector_store_manager/: vector_store_service_pinecone.py
modules/web_search_manager/: web_search_service_gemini.py
