[project]
name = "general-medical-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.5",
    "langchain-huggingface>=0.2.0",
    "langchain-pinecone>=0.2.6",
    "pinecone>=6.0.2",
    "pypdf>=5.5.0",
    "python-dotenv>=1.1.0",
]
